@@ -8,7 +8,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \thispagestyle{empty}
-\section{How to run \WANT\ : a step by step description}\label{section:run}
+\section{How to run \WANT\ : a step by step description}\label{sec:run}
 
 \noindent \underline {NOTE}: At present the \WANT\ code is
 implemented to work as post processing of DFT 
